@@ -1,4 +1,4 @@
-/* $Id: main.c,v 1.23 2012/04/15 21:01:58 imilh Exp $ */
+/* $Id: main.c,v 1.24 2012/04/15 21:15:13 imilh Exp $ */
 
 /*
  * Copyright (c) 2009, 2010, 2011 The NetBSD Foundation, Inc.
@@ -249,6 +249,10 @@ main(int argc, char *argv[])
 	case PKG_SHPKGCONT_CMD: /* show remote package content */
 		missing_param(argc, 2, MSG_MISSING_PKGNAME);
 		show_pkg_info('L', argv[1]); /* pkg_info flag */
+		break;
+	case PKG_SHPKGDESC_CMD: /* show remote package DESCR */
+		missing_param(argc, 2, MSG_MISSING_PKGNAME);
+		show_pkg_info('d', argv[1]); /* pkg_info flag */
 		break;
 	case PKG_GINTO_CMD: /* Miod's request */
 		ginto();
