@@ -1,4 +1,5 @@
 20120415
+	Added pkg-content and pkg-descr
 	Introduced pkg_infos.c to fetch remote informations
 	Removed -D_FILE_OFFSET_BITS=64 from Makefile and added it in fsops.c
 
